--- a/src/Reportes/solicitudia.jrxml
+++ b/src/Reportes/solicitudia.jrxml
@@ -3,7 +3,7 @@
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<parameter name="p_nrosolicitud" class="java.lang.Integer">
+	<parameter name="p_nrosolicitud" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
