--- a/src/agro/Menu.form
+++ b/src/agro/Menu.form
@@ -384,6 +384,21 @@
                 <Property name="text" type="java.lang.String" value="FACTURA"/>
               </Properties>
             </Menu>
+            <Menu class="javax.swing.JMenu" name="jMenu10">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="NOTA CREDITO"/>
+              </Properties>
+            </Menu>
+            <Menu class="javax.swing.JMenu" name="jMenu25">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="NOTA DEBITO"/>
+              </Properties>
+            </Menu>
+            <Menu class="javax.swing.JMenu" name="jMenu26">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="NOTA REMISION"/>
+              </Properties>
+            </Menu>
           </SubComponents>
         </Menu>
       </SubComponents>
